force-app/main/default/objects/Service_Item__c/Service_Item__c.object-meta.xml
<CustomObject>
    <label>Service Item</label>
    <nameField>
        <label>Service Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>