force-app/main/default/objects/Service_Item__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Service Items</relationshipLabel>
    <relationshipName>Service_Items</relationshipName>
    <type>Lookup</type>
</CustomField>