force-app/main/default/objects/Service_Item__c/fields/Service_Item_Key__c.field-meta.xml
<CustomField>
    <fullName>Service_Item_Key__c</fullName>
    <externalId>true</externalId>
    <label>Service Item Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>