force-app/main/default/objects/Service_Item__c/fields/Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Service_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Package</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Service Items</relationshipLabel>
    <relationshipName>Service_Items</relationshipName>
    <type>Lookup</type>
</CustomField>